[gd_scene load_steps=6 format=3 uid="uid://cob5o1o43dbqs"]

[ext_resource type="Script" path="res://Scenes/NewServiceField/new_service.gd" id="1_sxqxv"]

[sub_resource type="InputEventAction" id="InputEventAction_n5v00"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_l25a5"]
events = [SubResource("InputEventAction_n5v00")]

[sub_resource type="InputEventAction" id="InputEventAction_fmrh6"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_23bxn"]
events = [SubResource("InputEventAction_fmrh6")]

[node name="NewServiceField" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 208.0
offset_bottom = 50.0
script = ExtResource("1_sxqxv")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -50.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Input service name"
placeholder_text = "Input service name"
max_length = 25
clear_button_enabled = true
select_all_on_focus = true
caret_blink = true

[node name="DiscardButton" type="Button" parent="."]
layout_mode = 0
offset_top = 51.0
offset_right = 103.0
offset_bottom = 82.0
tooltip_text = "Discard"
shortcut = SubResource("Shortcut_l25a5")
text = "üóëÔ∏è"

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 51.0
offset_right = 208.0
offset_bottom = 82.0
tooltip_text = "Confirm"
disabled = true
shortcut = SubResource("Shortcut_23bxn")
text = "‚úîÔ∏è"

[node name="LogoPickButton" type="Button" parent="."]
layout_mode = 0
offset_left = 158.0
offset_right = 208.0
offset_bottom = 50.0
tooltip_text = "Pick an image"
text = "üì∑"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 158.0
offset_right = 208.0
offset_bottom = 50.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="DiscardLogoButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 178.0
offset_right = 208.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
disabled = true
text = "‚ùå"

[node name="NativeFileDialog" type="NativeFileDialog" parent="."]
title = "Open a File"
file_mode = 0
filters = PackedStringArray("\"*.png, *.jpg, *.jpeg, *.gif ; PNG, JPG, JPEG, GIF Image Files")

[node name="NativeNotification" type="NativeNotification" parent="."]
title = "Error creating service!"
notification_text = "Service already exists!"

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="LogoPickButton" to="." method="_on_logo_pick_button_pressed"]
[connection signal="pressed" from="DiscardLogoButton" to="." method="_on_discard_logo_button_pressed"]
[connection signal="file_selected" from="NativeFileDialog" to="." method="_on_native_file_dialog_file_selected"]
